@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+program_path=${pcfiledir}
+
+Name: icon-naming-utils
+Description: Utilities for mapping legacy GNOME and KDE icon names to the new Icon Naming Specification
+Version: @VERSION@
+Requires: 
+Libs: 
+Cflags: 
